<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RatingBar
        android:id="@+id/ratingBar4"
        android:layout_width="163dp"
        android:layout_height="29dp"
        android:progressDrawable="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.952" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="163dp"
        android:layout_height="29dp"
        android:progressDrawable="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="158dp"
        android:layout_height="37dp"
        android:layout_marginTop="140dp"
        android:progressDrawable="@android:drawable/btn_star_big_on"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
        app:layout_constraintTop_toTopOf="@+id/frameLayout4" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="164dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="101dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ugabay" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt111"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/kkk"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:text="@string/txt2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="57dp"
        android:layout_height="47dp"
        android:text="@string/bt11"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.748" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="164dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="101dp"
            app:srcCompat="@drawable/archi" />
    </FrameLayout>

    <TextView
        android:id="@+id/tct3"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tct3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.759" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="57dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt33"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.744" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="164dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/x" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt4"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:text="@string/txt4"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.71"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/bt5"
        android:layout_width="57dp"
        android:layout_height="47dp"
        android:text="@string/bt5"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout3"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
        app:layout_constraintTop_toTopOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.744" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="164dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt4"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            app:srcCompat="@drawable/senani" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt9"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:text="@string/txt9"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
        app:layout_constraintVertical_bias="0.71"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/bt6"
        android:layout_width="57dp"
        android:layout_height="47dp"
        android:text="@string/bt6"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
        app:layout_constraintVertical_bias="0.744"
        android:textSize="8sp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="163dp"
        android:layout_height="29dp"
        android:progressDrawable="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.972" />

</androidx.constraintlayout.widget.ConstraintLayout>